# blue_physics_engine

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
res/meshes/: sphere.obj.mbin
res/shaders/: basic.fs  basic.vs  normal.fs
src/: application.cpp  application.h  main.cpp
src/framework/: camera.cpp  camera.h  includes.h  light.cpp  light.h  scenenode.cpp  scenenode.h  utils.cpp  utils.h
src/graphics/: material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/physics/: ballistic.cpp  ballistic.h  core.h  particle.cpp  particle.h
